@@ -8,7 +8,7 @@
 #include "resource.h"
 #include "PWHistDlg.h"
 #include "corelib/ItemData.h"
-#include ".\pwhistdlg.h"
+#include "corelib/PWSprefs.h"
 
 
 // CPWHistDlg dialog
@@ -39,7 +39,7 @@ void CPWHistDlg::DoDataExchange(CDataExchange* pDX)
   DDX_Control(pDX, IDC_PWHISTORY_LIST, m_PWHistListCtrl);
   DDX_Check(pDX, IDC_SAVE_PWHIST, m_SavePWHistory);
   DDX_Text(pDX, IDC_MAXPWHISTORY, m_MaxPWHistory);
-  DDV_MinMaxInt(pDX, m_MaxPWHistory, 1, 25);
+  DDV_MinMaxInt(pDX, m_MaxPWHistory, 1, 255);
 }
 
 
@@ -108,7 +108,7 @@ BOOL CPWHistDlg::OnInitDialog()
   	m_MaxPWHistory = 1;
 
   pspin->SetBuddy(GetDlgItem(IDC_MAXPWHISTORY));
-  pspin->SetRange(1, 25);
+  pspin->SetRange(1, 255);
   pspin->SetBase(10);
   pspin->SetPos(m_MaxPWHistory);
  
