@@ -18,6 +18,8 @@ as displayed in the "Nested Tree Mode".
 
 Changes to Existing Features in 3.03
 ====================================
+[1532368] increase password history - now maximum is limited by
+corresponding field in the database - i.e. 1 byte = 255.
 
 Bugs fixed in 3.03
 ==================
